--- a/index.html
+++ b/index.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CLNIC SERVICES</title>
-    <link rel="stylesheet" href="./main css/main.css">
+    <link rel="stylesheet" href="/css/main.css">
 </head>
 <body>
-    
+    <nav>
+        <div class="nav-left"></div>
+        <div class="nav-right">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="#">Health Check-up</a></li>
+            <li><a href="#">Contact Us</a></li>
+
+        </div>
+    </nav>
 </body>
 </html>
