--- a/index.html
+++ b/index.html
@@ -1,21 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CLNIC SERVICES</title>
     <link rel="stylesheet" href="/css/main.css">
 </head>
+
 <body>
     <nav>
-        <div class="nav-left"></div>
+        <div class="nav-left">
+            <img src="./image/logo.png" alt="">
+        </div>
         <div class="nav-right">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Health Check-up</a></li>
-            <li><a href="#">Contact Us</a></li>
-
+            <ul>
+                <li>
+                    <a href="#">HOME</a>
+                </li>
+                <li>
+                    <a href="#">SERVICE</a>
+                </li>
+                <li>
+                    <a href="#">HEALTH-CHECK</a>
+                </li>
+                <li>
+                    <a href="#">CONTACT</a>
+                </li>
+            </ul>
         </div>
     </nav>
 </body>
+
 </html>
