--- a/index.html
+++ b/index.html
@@ -15,21 +15,12 @@
         </div>
         <div class="nav-right">
             <ul>
-                <li>
-                    <a href="#">HOME</a>
-                </li>
-                <li>
-                    <a href="#">SERVICE</a>
-                </li>
-                <li>
-                    <a href="#">HEALTH-CHECK</a>
-                </li>
-                <li>
-                    <a href="#">CONTACT</a>
-                </li>
+                <li><a href="#">HOME</a></li>
+                <li><a href="#">SERVICE</a></li>
+                <li><a href="#">HEALTH-CHECK</a></li>
+                <li><a href="#">CONTACT</a></li>
             </ul>
         </div>
     </nav>
 </body>
-
 </html>
