--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             </ul>
         </div>
     </nav>
+    <header><img src="./image/header.jpg" alt="" width="100%" height="650px"></header>
 </body>
 
 </html>
