#17 create content why they choose us

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CLNIC SERVICES</title>
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/home.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -23,5 +24,138 @@
         </div>
     </nav>
     <header><img src="./image/header.jpg" alt="" width="100%" height="650px"></header>
+    <div class="why-they-choose-us">
+        <h1>Why they choose us</h1>
+        <div class="card-container">
+            <div class="card">
+                <div class="card-header">
+                    <i class="fa fa-stethoscope" style="font-size:60px" ;></i>
+                </div>
+                <div class="card-footer">
+                    <p>year-old trusted brand with more than 80 clinics and a hospital in Singapore</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-header">
+                    <i class="fa fa-heart-o" style="font-size:60px" ;></i>
+                </div>
+                <div class="card-footer">
+                    <p>Leading integrated private healthcare provider in Asia, serving patients in</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-header">
+                    <i class="fa fa-clock-o" style="font-size:60px" ;></i>
+                </div>
+                <div class="card-footer">
+                    <p>40+ year-old trusted brand with more than 80 clinics and a hospital in Singapore</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-header">
+                    <i class="	fa fa-ambulance" style="font-size:60px" ;></i>
+                </div>
+                <div class="card-footer">
+                    <p>40+ year-old trusted brand with more than 80 clinics and a hospital in Singapore</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="our-doctor">
+        <h1>OUR DOCTOR</h1>
+        <div class="container-buntton">
+            <button>ALL DOCTOR</button>
+        </div>
+        <div class="container">
+            <div class="card">
+                <div class="card-header">
+                    <img src="./images/doctor1.png" alt="">
+                </div>
+                <div class="card-footer">
+                    <h3>BUNNARITH PHOEURN</h3>
+                    <P>GENERALLY</P>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-header">
+                    <img src="./images/doctor1.png" alt="">
+                </div>
+                <div class="card-footer">
+                    <h3>BUNNARITH PHOEURN</h3>
+                    <P>GENERALLY</P>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-header">
+                    <img src="./images/doctor1.png" alt="">
+                </div>
+                <div class="card-footer">
+                    <h3>BUNNARITH PHOEURN</h3>
+                    <P>GENERALLY</P>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-header">
+                    <img src="./images/doctor1.png" alt="">
+                </div>
+                <div class="card-footer">
+                    <h3>BUNNARITH PHOEURN</h3>
+                    <P>GENERALLY</P>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="contact-us">
+        <h1>Make appointment</h1>
+        <div class="check-schedule">
+            <button>Check schedule</button>
+            <div class="container">
+                <div class="form-container">
+                    <header>
+                        <h3>Make appointment</h3>
+                    </header>
+                    <form action="#">
+                        <input type="email" value="email">
+                        <input type="password" value="password">
+                        <input type="number" value="TEL">
+                    </form>
+                    <button>AGREE</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="location">
+        <h1>OUR LOCATION</h1>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15634.646577461135!2d104.9233301!3d11.576096!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31095144cbdbf311%3A0x2588e1ac1787eb64!2sWat%20Phnom%20Daun%20Penh!5e0!3m2!1sen!2skh!4v1695625253370!5m2!1sen!2skh" width="1400" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
+    <footer>
+        <div class="main-footer">
+            <div class="footer-left">
+                <p>Raffles Medical Phnom Penh
+                    Daun Penh 12211, Phnom Penh , Kingdom of Cambodia.
+                    Tel: 855 (0) 12 816 911
+                    Email: enquiries_phnompenh@rafflesmedical.com</p>
+            </div>
+            <div class="footer-center">
+                <ul>
+                    <li><a href="#">HOME</a></li>
+                    <li><a href="#">SERVICE</a></li>
+                    <li><a href="#">HEALTH-CHECK</a></li>
+                    <li><a href="#">CONTACT</a></li>
+                </ul>
+            </div>
+            <div class="footer-right">
+                <h4>CONTACT</h4>
+                <div class="footer-item">
+                    <i class="fa fa-telegram" style="font-size:25px;color:rgb(42, 99, 224);"></i>
+                    <p>Davy Tang</p>
+                </div>
+                <div class="footer-item">
+                    <i class="fa fa-phone" style="font-size:25px;color:rgb(42, 99, 224);"></i>
+                    <p>012 345 6789</p>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
