--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="card-container">
             <div class="card">
                 <div class="card-header">
-                    <i class="fa fa-stethoscope" style="font-size:60px" ;></i>
+                    <i class="fa fa-stethoscope" style="font-size:60px;color:blue;" ;></i>
                 </div>
                 <div class="card-footer">
                     <p>year-old trusted brand with more than 80 clinics and a hospital in Singapore</p>
@@ -37,7 +37,7 @@
             </div>
             <div class="card">
                 <div class="card-header">
-                    <i class="fa fa-heart-o" style="font-size:60px" ;></i>
+                    <i class="fa fa-heart-o" style="font-size:60px;color:blue;" ;></i>
                 </div>
                 <div class="card-footer">
                     <p>Leading integrated private healthcare provider in Asia, serving patients in</p>
@@ -45,7 +45,7 @@
             </div>
             <div class="card">
                 <div class="card-header">
-                    <i class="fa fa-clock-o" style="font-size:60px" ;></i>
+                    <i class="fa fa-clock-o" style="font-size:60px;color:blue;" ;></i>
                 </div>
                 <div class="card-footer">
                     <p>40+ year-old trusted brand with more than 80 clinics and a hospital in Singapore</p>
@@ -53,7 +53,7 @@
             </div>
             <div class="card">
                 <div class="card-header">
-                    <i class="	fa fa-ambulance" style="font-size:60px" ;></i>
+                    <i class="	fa fa-ambulance" style="font-size:60px;color:blue;" ;></i>
                 </div>
                 <div class="card-footer">
                     <p>40+ year-old trusted brand with more than 80 clinics and a hospital in Singapore</p>
@@ -69,7 +69,7 @@
         <div class="container">
             <div class="card">
                 <div class="card-header">
-                    <img src="./images/doctor1.png" alt="">
+                    <img src="./image/doctor/doctor1.png" alt="">
                 </div>
                 <div class="card-footer">
                     <h3>BUNNARITH PHOEURN</h3>
@@ -78,7 +78,7 @@
             </div>
             <div class="card">
                 <div class="card-header">
-                    <img src="./images/doctor1.png" alt="">
+                    <img src="./image/doctor/doctor2.png" alt="">
                 </div>
                 <div class="card-footer">
                     <h3>BUNNARITH PHOEURN</h3>
@@ -87,7 +87,7 @@
             </div>
             <div class="card">
                 <div class="card-header">
-                    <img src="./images/doctor1.png" alt="">
+                    <img src="./image/doctor/doctor3.png" alt="">
                 </div>
                 <div class="card-footer">
                     <h3>BUNNARITH PHOEURN</h3>
@@ -96,7 +96,7 @@
             </div>
             <div class="card">
                 <div class="card-header">
-                    <img src="./images/doctor1.png" alt="">
+                    <img src="./image/doctor/doctor4.png" alt="">
                 </div>
                 <div class="card-footer">
                     <h3>BUNNARITH PHOEURN</h3>
@@ -147,11 +147,11 @@
             <div class="footer-right">
                 <h4>CONTACT</h4>
                 <div class="footer-item">
-                    <i class="fa fa-telegram" style="font-size:25px;color:rgb(42, 99, 224);"></i>
+                    <i class="fa fa-telegram" style="font-size:25px;color:blue;"></i>
                     <p>Davy Tang</p>
                 </div>
                 <div class="footer-item">
-                    <i class="fa fa-phone" style="font-size:25px;color:rgb(42, 99, 224);"></i>
+                    <i class="fa fa-phone" style="font-size:25px;color:blue;"></i>
                     <p>012 345 6789</p>
                 </div>
             </div>
