--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         <div class="nav-right">
             <ul>
                 <li><a href="#">HOME</a></li>
-                <li><a href="#">SERVICE</a></li>
-                <li><a href="#">HEALTH-CHECK</a></li>
-                <li><a href="#">CONTACT</a></li>
+                <li><a href="/page/service.html">SERVICE</a></li>
+                <li><a href="/page/health-check-up.html">HEALTH-CHECK</a></li>
+                <li><a href="/page/contact Us.html">CONTACT</a></li>
             </ul>
         </div>
     </nav>
@@ -126,12 +126,12 @@
     </div>
     <div class="location">
         <h1>OUR LOCATION</h1>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15634.646577461135!2d104.9233301!3d11.576096!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31095144cbdbf311%3A0x2588e1ac1787eb64!2sWat%20Phnom%20Daun%20Penh!5e0!3m2!1sen!2skh!4v1695625253370!5m2!1sen!2skh" width="1400" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15634.646577461135!2d104.9233301!3d11.576096!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31095144cbdbf311%3A0x2588e1ac1787eb64!2sWat%20Phnom%20Daun%20Penh!5e0!3m2!1sen!2skh!4v1695625253370!5m2!1sen!2skh" width="1800" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
     <footer>
         <div class="main-footer">
             <div class="footer-left">
-                <p>Raffles Medical Phnom Penh
+                <p>Davy Clini Phnom Penh
                     Daun Penh 12211, Phnom Penh , Kingdom of Cambodia.
                     Tel: 855 (0) 12 816 911
                     Email: enquiries_phnompenh@rafflesmedical.com</p>
