--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <nav>
         <div class="nav-left">
-            <img src="./image/logo.png" alt="">
+            <img src="/image/img-of-content/logo.png" alt="">
         </div>
         <div class="nav-right">
             <ul>
@@ -23,7 +23,7 @@
             </ul>
         </div>
     </nav>
-    <header><img src="./image/header.jpg" alt="" width="100%" height="650px"></header>
+    <header><img src="/image/img-of-content/header.jpg" alt="" width="100%" height="650px"></header>
     <div class="why-they-choose-us">
         <h1>Why they choose us</h1>
         <div class="card-container">
