--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     <img src="./image/doctor/doctor4.png" alt="">
                 </div>
                 <div class="card-footer">
-                    <h3>BUNNARITH PHOEURN</h3>
+                    <h3><a href="./page/Information Doctor1.html">BUNNARITH PHOEURN</a></h3>
                     <P>GENERALLY</P>
                 </div>
             </div>
