--- a/index.html
+++ b/index.html
@@ -126,12 +126,15 @@
     </div>
     <div class="location">
         <h1>OUR LOCATION</h1>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15634.646577461135!2d104.9233301!3d11.576096!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31095144cbdbf311%3A0x2588e1ac1787eb64!2sWat%20Phnom%20Daun%20Penh!5e0!3m2!1sen!2skh!4v1695625253370!5m2!1sen!2skh" width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15634.646577461135!2d104.9233301!3d11.576096!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31095144cbdbf311%3A0x2588e1ac1787eb64!2sWat%20Phnom%20Daun%20Penh!5e0!3m2!1sen!2skh!4v1695625253370!5m2!1sen!2skh"
+            width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
     <footer>
         <div class="footer-container">
             <div class="footer-left">
-                <img src="./image/logo.png" alt="">
+                <img src="./image/img-of-content/logo.png" alt="">
             </div>
             <div class="footer-center">
                 <div class="footer-center-header">
@@ -140,9 +143,9 @@
                 <div class="footer-center-footer">
                     <ul>
                         <li><a href="#">HOME</a></li>
-                        <li><a href="#">SERVICE</a></li>
-                        <li><a href="#">HEALTH-CHECK</a></li>
-                        <li><a href="#">CONTACT</a></li>
+                        <li><a href="/page/service.html">SERVICE</a></li>
+                        <li><a href="/page/health-check-up.html">HEALTH-CHECK</a></li>
+                        <li><a href="/page/contact Us.html">CONTACT</a></li>
                     </ul>
                 </div>
             </div>
@@ -169,4 +172,5 @@
         </div>
     </footer>
 </body>
+
 </html>
