--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </ul>
         </div>
     </nav>
-    <header><img src="/image/img-of-content/header.jpg" alt="" width="100%" height="650px"></header>
+    <header><img src="/image/img-of-content/header.jpg" alt="" width="100%" height="500px"></header>
     <div class="why-they-choose-us">
         <h1>Why they choose us</h1>
         <div class="card-container">
@@ -126,7 +126,7 @@
     </div>
     <div class="location">
         <h1>OUR LOCATION</h1>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15634.646577461135!2d104.9233301!3d11.576096!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31095144cbdbf311%3A0x2588e1ac1787eb64!2sWat%20Phnom%20Daun%20Penh!5e0!3m2!1sen!2skh!4v1695625253370!5m2!1sen!2skh" width="1800" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15634.646577461135!2d104.9233301!3d11.576096!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31095144cbdbf311%3A0x2588e1ac1787eb64!2sWat%20Phnom%20Daun%20Penh!5e0!3m2!1sen!2skh!4v1695625253370!5m2!1sen!2skh" width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
     <footer>
         <div class="main-footer">
