--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <div class="our-doctor">
         <h1>OUR DOCTOR</h1>
         <div class="container-buntton">
-            <button>ALL DOCTOR</button>
+            <button>ALL DOCTOR <i class="fa fa-search"></i> </button>
         </div>
         <div class="container">
             <div class="card">
