--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             </div>
             <div class="card">
                 <div class="card-header">
-                    <a href=""><img src="/image/doctor-no-bg/doctor2.png" alt=""></a>
+                    <a href="/page/information-of-Doctor2.html"><img src="/image/doctor-no-bg/doctor2.png" alt=""></a>
                 </div>
                 <div class="card-footer">
                     <h3>BUNNARITH PHOEURN</h3>
