#27 create information of doctor page

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             </div>
             <div class="card">
                 <div class="card-header">
-                    <img src="/image/doctor-no-bg/doctor3.png" alt="">
+                    <a href="/page/information-of-doctor3.html"><img src="/image/doctor-no-bg/doctor3.png" alt=""></a>
                 </div>
                 <div class="card-footer">
                     <h3>BUNNARITH PHOEURN</h3>
