#28 create information of doctor4 page and input 3 image to folder family medicince specialist

--- a/index.html
+++ b/index.html
@@ -96,10 +96,10 @@
             </div>
             <div class="card">
                 <div class="card-header">
-                    <img src="/image/doctor-no-bg/doctor4.png" alt="">
+                    <a href="/page/information of doctor4.html"><img src="/image/doctor-no-bg/doctor4.png" alt=""></a>
                 </div>
                 <div class="card-footer">
-                    <h3><a href="./page/Information Doctor1.html">BUNNARITH PHOEURN</a></h3>
+                    <h3><a href="/page/">BUNNARITH PHOEURN</a></h3>
                     <P>GENERALLY</P>
                 </div>
             </div>
