#13 nav-bar style

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <nav>
+    <!-- <nav>
         <div class="nav-left">
             <img src="/image/img-of-content/logo.png" alt="">
         </div>
@@ -22,7 +22,24 @@
                 <li><a href="/page/contact Us.html">CONTACT</a></li>
             </ul>
         </div>
-    </nav>
+    </nav> -->
+    <nav>
+        <div class="nav-left">
+          <img src="./image/img-of-content/logo.png" alt="">
+        </div>
+        <div class="nav-right">
+          <input id="menu__toggle" type="checkbox" />
+          <label class="menu__btn" for="menu__toggle">
+            <span></span>
+          </label>
+          <ul class="menu__box">
+            <li><a class="menu__item" href="#">HOME</a></li>
+            <li><a class="menu__item" href="/page/service.html">ABOUT</a></li>
+            <li><a class="menu__item" href="/page/health-check-up.html">HEALTH-CHECK</a></li>
+            <li><a class="menu__item" href="/page/contact Us.html">CONTACT</a></li>
+          </ul>
+        </div>
+      </nav>
     <header><img src="/image/img-of-content/header.jpg" alt="" width="100%" height="500px"></header>
     <div class="why-they-choose-us">
         <h1>Why they choose us</h1>
