--- a/index.html
+++ b/index.html
@@ -10,20 +10,6 @@
 </head>
 
 <body>
-    <!-- <nav>
-        <div class="nav-left">
-            <img src="/image/img-of-content/logo.png" alt="">
-        </div>
-        <div class="nav-right">
-            <ul>
-                <li><a href="#">HOME</a></li>
-                <li><a href="/page/service.html">SERVICE</a></li>
-                <li><a href="/page/health-check-up.html">HEALTH-CHECK</a></li>
-                <li><a href="/page/contact Us.html">CONTACT</a></li>
-            </ul>
-        </div>
-<<<<<<< HEAD
-    </nav> -->
     <nav>
         <div class="nav-left">
           <img src="./image/img-of-content/logo.png" alt="">
@@ -41,11 +27,8 @@
           </ul>
         </div>
       </nav>
-    <header><img src="/image/img-of-content/header.jpg" alt="" width="100%" height="500px"></header>
-=======
     </nav>
-    <header><img src="/image/img-of-content/header.jpg" alt="" width="100%" height="700px"></header>
->>>>>>> 6c320b198340a64bf185b9318e8eca2fe5dc93ea
+    <header>.</header>
     <div class="why-they-choose-us">
         <h1>Why they choose us</h1>
         <div class="card-container">
