--- a/index.html
+++ b/index.html
@@ -10,23 +10,6 @@
 </head>
 
 <body>
-<<<<<<< HEAD
-=======
-    <!-- <nav>
-        <div class="nav-left">
-            <img src="/image/img-of-content/logo.png" alt="">
-        </div>
-        <div class="nav-right">
-            <ul>
-                <li><a href="#">HOME</a></li>
-                <li><a href="/page/service.html">SERVICE</a></li>
-                <li><a href="/page/health-check-up.html">HEALTH-CHECK</a></li>
-                <li><a href="/page/contact Us.html">CONTACT</a></li>
-            </ul>
-        </div>
-<<<<<<< HEAD
-    </nav> -->
-<!-- >>>>>>> 79eb917008288d365a63402a7ec03c3613f739ca -->
     <nav>
         <div class="nav-left">
           <img src="./image/img-of-content/logo.png" alt="">
@@ -44,8 +27,7 @@
           </ul>
         </div>
       </nav>
-    <header><img src="/image/img-of-content/header.jpg" alt="" width="100%" height="500px"></header>
-<!-- >>>>>>> 79eb917008288d365a63402a7ec03c3613f739ca -->
+    <header>.</header>
     <div class="why-they-choose-us">
         <h1>Why they choose us</h1>
         <div class="card-container">
