--- a/index.html
+++ b/index.html
@@ -12,21 +12,21 @@
 <body>
     <nav>
         <div class="nav-left">
-          <img src="./image/img-of-content/logo.png" alt="">
+            <img src="./image/img-of-content/logo.png" alt="">
         </div>
         <div class="nav-right">
-          <input id="menu__toggle" type="checkbox" />
-          <label class="menu__btn" for="menu__toggle">
-            <span></span>
-          </label>
-          <ul class="menu__box">
-            <li><a class="menu__item" href="#">HOME</a></li>
-            <li><a class="menu__item" href="/page/service.html">ABOUT</a></li>
-            <li><a class="menu__item" href="/page/health-check-up.html">HEALTH-CHECK</a></li>
-            <li><a class="menu__item" href="/page/contact Us.html">CONTACT</a></li>
-          </ul>
+            <input id="menu__toggle" type="checkbox" />
+            <label class="menu__btn" for="menu__toggle">
+                <span></span>
+            </label>
+            <ul class="menu__box">
+                <li><a class="menu__item" href="#">HOME</a></li>
+                <li><a class="menu__item" href="/page/service.html">ABOUT</a></li>
+                <li><a class="menu__item" href="/page/health-check-up.html">HEALTH-CHECK</a></li>
+                <li><a class="menu__item" href="/page/contact Us.html">CONTACT</a></li>
+            </ul>
         </div>
-      </nav>
+    </nav>
     <header>.</header>
     <div class="why-they-choose-us">
         <h1>Why they choose us</h1>
@@ -109,25 +109,25 @@
             </div>
         </div>
     </div>
-    <div class="contact-us">
-        <h1>Make appointment</h1>
-        <div class="check-schedule">
-            <button><a href="./page/schedul.html">Check schedule</a></button>
-            <div class="container">
-                <div class="form-container">
-                    <header>
-                        <h3>Make appointment</h3>
-                    </header>
-                    <form action="#">
-                        <input type="email"  placeholder="Enter your Email">
-                        <input type="password" placeholder="Password">
-                        <input type="text" placeholder="Enter your phone number">
-                    </form>
-                    <button>AGREE</button>
-                </div>
+    <div class="feed-back">
+        <form>
+            <h3>Give Feedback</h3>
+            <div class="input-group">
+                <input type="text" id="name" placeholder="Username">
+                <label for="name"></label>
             </div>
-        </div>
+            <div class="input-group">
+                <input type="email" id="email" placeholder="Email">
+                <label for="email"></label>
+            </div>
+            <div class="input-group">
+                <textarea id="message" cols="30" rows="8" placeholder="Give me some feedback"></textarea>
+                <label for="name"></label>
+            </div>
+            <button type="submit">Submit</button>
+        </form>
     </div>
+
     <div class="location">
         <h1>OUR LOCATION</h1>
         <iframe
