--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
         </div>
     </nav>
     <header>
-        
+        <div class="image">
+            <b>Davy Clinic</b>
+        </div>
     </header>
     <div class="card-container">
         <div class="card">
@@ -81,71 +83,6 @@
                 <h4>ECELLENT SERVICE</h4>
                 <P>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Provident ex possimus velit nemo impedit
                     eaque!</P>
-            </div>
-        </div>
-    </div>
-    <div class="service">
-        <h2>Our Care</h2>
-        <div class="service-container">
-            <div class="service-card">
-                <div class="service-card-imge">
-                    <i class="material-icons" style="font-size:48px;">cloud</i>
-                    <span><b>Teeth</b></span>
-                </div>
-                <div class="service-card-footer">
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officiis quos non illo quidem</p>
-                </div>
-
-            </div>
-            <div class="service-card">
-                <div class="service-card-imge">
-                    <i class="material-icons" style="font-size:48px;">cloud</i>
-                    <span><b>Teeth</b></span>
-                </div>
-                <div class="service-card-footer">
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officiis quos non illo quidem</p>
-                </div>
-
-            </div>
-            <div class="service-card">
-                <div class="service-card-imge">
-                    <i class="material-icons" style="font-size:48px;">cloud</i>
-                    <span><b>Teeth</b></span>
-                </div>
-                <div class="service-card-footer">
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officiis quos non illo quidem</p>
-                </div>
-
-            </div>
-            <div class="service-card">
-                <div class="service-card-imge">
-                    <i class="material-icons" style="font-size:48px;">cloud</i>
-                    <span><b>Teeth</b></span>
-                </div>
-                <div class="service-card-footer">
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officiis quos non illo quidem</p>
-                </div>
-
-            </div>
-            <div class="service-card">
-                <div class="service-card-imge">
-                    <i class="material-icons" style="font-size:48px;">cloud</i>
-                    <span><b>Teeth</b></span>
-                </div>
-                <div class="service-card-footer">
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officiis quos non illo quidem</p>
-                </div>
-
-            </div>
-            <div class="service-card">
-                <div class="service-card-imge">
-                    <i class="material-icons" style="font-size:48px;">cloud</i>
-                    <span><b>Teeth</b></span>
-                </div>
-                <div class="service-card-footer">
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officiis quos non illo quidem</p>
-                </div>
-
             </div>
         </div>
     </div>
